[package]
name = "lanjet"
version = "0.1.0"
edition = "2024"
authors = ["HuRuilizhen <huruilizhen@gmail.com>"]
description = " A blazing fast LAN file sharing tool built with Rust"
license = "MIT"
repository = "https://github.com/HuRuilizhen/lanjet"
readme = "README.md"
keywords = ["file-sharing", "lan", "http-server", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
mime_guess = "2.0.5"
pathdiff = "0.2.3"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = "0.6.6"
