[package]
name = "lanjet"
version = "0.2.0"
edition = "2024"
authors = ["HuRuilizhen <huruilizhen@gmail.com>"]
description = " A blazing fast LAN file sharing tool built with Rust"
license = "MIT"
repository = "https://github.com/HuRuilizhen/lanjet"
homepage = "https://github.com/HuRuilizhen/lanjet"
readme = "README.md"
keywords = ["file-sharing", "lan", "http-server", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
http-body-util = "0.1.3"
ignore = "0.4.25"
local-ip-address = "0.6.5"
maud = "0.27.0"
mime_guess = "2.0.5"
pathdiff = "0.2.3"
qrcode = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
unicode-width = "0.2.2"
urlencoding = "2.1.3"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.5"
